--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
       });
     </script>
 
-    <p style="bottom: 10px; right: 10px; position: absolute">
+    <!-- <p style="bottom: 10px; right: 10px; position: absolute">
       <a
         href="https://wordtohtml.net/?utm_source=wth_free_doc_conversion_link&utm_medium=external"
         target="_blank"
@@ -1034,7 +1034,7 @@
         style="font-size: 11px; color: #d0d0d0"
         >Document Converter for Windows</a
       >
-    </p>
+    </p> -->
     <script
       defer
       src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015"
@@ -1044,3 +1044,4 @@
     ></script>
   </body>
 </html>
+
