--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
                   ><span
                     class="__cf_email__"
                     data-cfemail="2f5c4456434e414c4a495a5d41465b5a5d4a6f48424e4643014c4042"
-                    >[email&#160;protected]</span
+                    >skylancefurniture@gmail.com</span
                   ></span
                 >
               </a>
@@ -1044,4 +1044,5 @@
     ></script>
   </body>
 </html>
+
 
