--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
         { name: "TV Unit", slug: "TV" },
         { name: "Mandir", slug: "mandir" },
         { name: "Round Shape Furniture", slug: "round lcd" },
-        { name: "3 Sitter Sofa", slug: "3 sofa" },
+        { name: "3 Seater Sofa", slug: "3 sofa" },
         { name: "Openable Wardrobe", slug: "open w" },
         { name: "Sliding Wardrobe", slug: "sliding w" },
         { name: "Dewan with Hydraulic", slug: "dewan" },
@@ -1044,5 +1044,6 @@
     ></script>
   </body>
 </html>
+
 
 
